Removing unnecessary ResourceLoader modules, changing fade-overlay to white, changing sidebar animation (before the html element used transformx, which breaks position:fixed on WebKit so I used a JS workaround, but now the sidebar itself transforms and position:fixedworks fine), closing the keyboard when the search box is closed on small. @georgebarnick I’ve been able to replicate the header issue on all browsers I’ve tested; it looks like it has to do with the page title being hidden. I’ll try and fix it in the next commit.

--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -28,14 +28,15 @@ body {
 #fade-overlay {
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	top: 0;
-	right: 0;
+	left: 0;
 	display: block;
 	opacity: 0;
 	-webkit-transition: opacity 0.2s ease;
-	transition: opacity 0.2s ease;
-	background: #000;
+	transition: opacity 0.2s ease, left;
+	background: #fff;
+	cursor: pointer;
 }
 
 .fade-overlay-active {
@@ -463,11 +464,11 @@ a.toclevel-6 {
 	vertical-align: text-bottom;
 }
 
-/*.dropdown-highlighted,
+.dropdown-highlighted,
 #searchshower:hover,
 #sidebarshower:hover {
 	background-color: midnightblue !important;
-}*/
+}
 
 #toolbox-link {
 	/*margin-top: 0.5em;*/
@@ -539,7 +540,7 @@ a.toclevel-6 {
 #sidebarshower {
 	position: absolute;
 	top: 0;
-	left: 0;
+	right: -2.75em;
 	width: 2.75em;
 	height: 2.75em;
 	background: #194a8d url("images/icon-rightbar.png") top left no-repeat;
