--- a/refreshed/small.css
+++ b/refreshed/small.css
@@ -1,19 +1,5 @@
 /* anything 600px and under - phones */
 
-
-html {
-	height: 100%;
-	-webkit-transition: 0.2s ease;
-	transition: 0.2s ease;
-	position: relative;
-}
-.sidebar-open {
-	-webkit-transform: translateX(15em);
-	-ms-transform: translateX(15em);
-	transform: translateX(15em); /*12em*/
-	overflow: hidden;
-}
-
 #header {
 	height: 2.75em;
 }
@@ -23,9 +9,16 @@ html {
 	left: -15em;
 	width: 15em;
 	top: 0;
-		-webkit-transform: translate3d(0,0,0);
-		transform: translate3d(0,0,0);
+	z-index: 10002;
+	-webkit-transition: 0.2s ease;
+	transition: 0.2s ease;
 }
+.sidebar-open {
+	left: 0;
+	-webkit-transform: translateX(15em);
+	transform: translateX(15em);
+}
+
 #sidebar ul {
 	top: 2.75em;
 	font-size: 13pt;
@@ -39,11 +32,19 @@ html {
 	display: block;
 }
 
-#siteinfo-main {
-	position: fixed;
-	left: -15em;
-	width: 15em;
+#sidebar-logo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 2.75em;
 	text-align: center;
+	padding: .5em 0;
+}
+
+#siteinfo-main {
+	display: none;
 }
 
 #siteinfo-main .arrow-link {
@@ -122,7 +123,7 @@ html {
 
 #userinfo .headermenu {
 	top: 2.75em;
-	background-color: rgb(25, 25, 112);
+	background-color: midnightblue;
 	padding: 0.15em 0 0.15em 0;
 }
 
@@ -139,6 +140,7 @@ html {
 #userinfo .headermenu a.new:hover {
 	color: #f47d64;
 }
+
 /*#siteinfo-main {
 	height: 2.75em;
 	margin-left: 2.75em;
